Revert "Fixed wrong colors."
This reverts commit 876978c59e8fa88a4412cfb1cbd3e5416c4bc47d.

--- a/css/styles.css
+++ b/css/styles.css
@@ -765,7 +765,6 @@ body {
     margin: auto;
     padding-top: 10px;
     transition: 0.3s;
-    color: #181818;
 
     border: 3px solid transparent;
     box-sizing: border-box;
